--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "ejs": "^3.1.10",
     "express": "^5.1.0",
     "node-cron": "^3.0.3",
-    "puppeteer": "^24.6.1"
+    "puppeteer": "^24.6.1",
+    "winston": "^3.17.0"
   },
   "type": "module",
   "devDependencies": {
